<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_animation"
            android:icon="@drawable/ic_content_copy"
            android:title="@string/animations" />
        <item
            android:id="@+id/nav_graphic"
            android:icon="@drawable/ic_inbox"
            android:title="@string/graphics" />
        <item
            android:id="@+id/nav_image"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/image" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_library_music"
            android:title="@string/audio" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/video" />
    </group>


</menu>
