<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jorgecaro.mediacloud.Fragments.AudioFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_margin="5dp"
        android:src="@drawable/ic_mic" />

    <TextView
        android:id="@+id/path"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/no_file" />

    <Button
        android:id="@+id/bt_play"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textColor="@android:color/background_light"
        android:text="@string/play_audio"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/bt_open"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_margin="10dp"
            android:textColor="@android:color/background_light"
            android:text="@string/open"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/bt_recorde"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_margin="10dp"
            android:text="@string/recorde"
            android:textColor="@android:color/background_light"
            android:background="@color/colorAccent"/>
    </LinearLayout>

</LinearLayout>
